2004-09-09  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/gnomemeeting.cpp, src/main_window.cpp: Moved
	GmWindow to main_window.cpp.

2004-09-09  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/gdkvideoio.cpp, src/main_window.cpp, 
	src/main_window.h: Cleaned code, removed "both with local video
	in separate window".

2004-09-08  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Changed version to 1.1.2.

2004-09-08  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed local video pause.

2004-09-08  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Removed unuseful asserts.

2004-09-08  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Removed key to hide status bar.

	* lib/gtk_menu_extensions.c, lib/gtk_menu_extensions.h: Added menu
	extensions.

	* src/chat_window.cpp, src/common.h, src/config.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h, src/tools.cpp, src/tools.h,
	src/tray.cpp, src/tray.h, src/urlhandler.cpp: API Changes, removed
	references to GmWindow to make it private. Make menu updates from
	functions on objects where the menus belong to.

2004-09-07  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/endpoint.h, src/main_window.cpp, 
	src/main_window.h, src/tray.cpp, src/tray.h, src/urlhandler.cpp:
	More cleanups.

2004-09-06  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/main_window.cpp, src/main_window.h: Only show
	the dialog, do not run it.

2004-09-06  Damien Sandras  <dsandras@gnome.org>

	* src/bonobo_component.cpp, src/callbacks.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h, src/misc.cpp, src/misc.h, 
	src/tray.cpp: Added function to get and set the URL in the URL
	bar. Modified GnomeMeeting Connect and Disconnect update the URL