@@ -1,3 +1,10 @@
+2004-09-10  Damien Sandras  <dsandras@gnome.org>
+
+	* configure.in: Fixed and incremented version number.
+
+	* src/common.h, src/main_window.h: Added comments and fixed build
+	error on sarge and suse.
+
 2004-09-09  Damien Sandras  <dsandras@gnome.org>
 
 	* src/common.h, src/gnomemeeting.cpp, src/main_window.cpp: Moved
